getting data stored in the array
retrieving data stored in the array

--- a/src/app/weather-list/weather-list.component.html
+++ b/src/app/weather-list/weather-list.component.html
@@ -1,3 +1,4 @@
 <section class="weather-list">
-	<app-weather-item></app-weather-item>
+	<app-weather-item *ngFor="let weatherItem of weatherItems"></app-weather-item>
 </section>
+ 
