--- a/src/app/weather-list/weather-list.component.html
+++ b/src/app/weather-list/weather-list.component.html
@@ -1,4 +1,4 @@
 <section class="weather-list">
-	<app-weather-item *ngFor="let weatherItem of weatherItems" [weatherItem] = weatherItem></app-weather-item>
+	<app-weather-item *ngFor="let weatherItem of weatherItems" [item] = weatherItem></app-weather-item>
 </section>
  
