rectified the error
rectified the error in the form template-driven

--- a/src/app/weather-search/weather-search.component.html
+++ b/src/app/weather-search/weather-search.component.html
@@ -1,5 +1,5 @@
 <section class = "weather-search">
-	<form #f="ngForm" (ngSubmit) = "onSubmit(f)" />
+	<form #f="ngForm" (ngSubmit) = "onSubmit(f)">
 		<label for="city">City</label>
 		<input  type="text" name="city" ngModel>
 		<button type="submit">Add City</button>
