making api calls to the weather data of openweather.org
making api calls to the weather data of openweather.org

--- a/src/app/weather-search/weather-search.component.html
+++ b/src/app/weather-search/weather-search.component.html
@@ -1,8 +1,9 @@
 <section class = "weather-search">
 	<form #f="ngForm" (ngSubmit) = "onSubmit(f)">
 		<label for="city">City</label>
-		<input  type="text" name="city" ngModel>
+		<input ngControl="location" type="text" name="city" ngModel>
 		<button type="submit">Add City</button>
 	</form>
 	<div><span class="info">City found:</span> City Name</div>
 </section>
+
